initial implementation of core app structure